--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NTMyODcxMDUzMDMxMjQzNzc4.DxiycQ.OBZtK-aa5fIPDKG24ef71IlUHuU","client":"532871053031243778","tag":"!","case":"true","separator":"\\s+","ownerId":"299232190078648323"}
+{"token":".","client":"532871053031243778","tag":"!","case":"true","separator":"\\s+","ownerId":"299232190078648323"}
